<resources>
    <string name="app_name">Neuroby</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="actionPositive">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_algebra">Álgebra</string>
    <string name="title_activity_trigonometria">Trigonometría</string>
    <string name="title_activity_trigonometria_uno_uno">Subtema 1.1</string>
    <string name="title_activity_trigonometria_uno_dos">Subtema 1.2</string>
    <string name="title_activity_trigonometria_uno_tres">Subtema 1.3</string>
    <string name="title_activity_trigonometria_uno_cuatro">Subtema 1.4</string>
    <string name="title_activity_trigonometria_uno_cinco">Subtema 1.5</string>
    <string name="descripcion_trigonometria_uno_uno">Definición de las funciones trigonométricas para un ángulo cualquiera</string>
    <string name="descripcion_trigonometria_uno_dos">Definición de las funciones trigonométricas para un ángulo agudo en un triángulo rectángulo</string>
    <string name="descripcion_trigonometria_uno_tres">Signo de las funciones trigonométricas en los cuatro cuadrantes</string>
    <string name="descripcion_trigonometria_uno_cuatro">Valores de las funciones trigonométricas para ángulos de 30, 45 y 60 grados y sus múltiplos</string>
    <string name="descripcion_trigonometria_uno_cinco">Identidades trigonométricas</string>
    <string name="descripcion_trigonometria_uno_seis">Teorema de Pitágoras</string>
    <string name="descripcion_trigonometria_uno_siete">Ley de senos y ley de cosenos</string>
    <string name="descripcion_trigonometria_uno_ocho">Ecuaciones trigonométricas de primer y segundo grado con una incógnita</string>

    <string name="descripcion_signos_cuadrantes">Considerando que la distancia de un punto cualquiera al origen de coordenadas siempre es positiva,
                                                    vemos que los signos de las funciones en los distintos cuadrantes son</string>


    <string name="referencia_trigonometria_baldor">

                Dr. J. A. Baldor\n
                2013 (Cuarta reimpresión)\n
                GEOMETRÍA Y TRIGONOMETRÍA\n
                México\n
                Grupo Editorial Patria

    </string>


    <string name="title_activity_calculo">Cálculo</string>

    <string name="text_descripcion_relaja">

        Esta es una sección para que te olvides un momento de los deberes y descanses por un rato.\n\n

        ¡Desestrésate! Tienes potencial.

    </string>


    <string name="text_acerca_neuroby">
        Acerca de Neuroby\n
    </string>

    <string name="text_descripcion_neuroby">

        Neuroby es una plataforma digital con el fin de brindar apoyo a estudiantes en temas muy importantes
        para la ingeneniería, como son Álgebra, Cálculo y Probabilidad, basándonos en los planes de estudio
        oficiales más recientes de la Facultad de Ingeniería de la UNAM (Plan 2016).\n\n\n

    </string>


    <string name="text_acerca_nosotros">
        Acerca de Nosotros\n
    </string>

    <string name="text_descripcion_nosotros">

        Nuestro equipo de trabajo está integrado por estudiantes de diferentes áreas de la ingeniería, de
        la Facultad de Ingeniería de la UNAM, con un pensamiento en común: que el conocimiento y la educación
        deben estar disponibles para todos. Es por esto que nos hemos reunido para crear una plataforma que sirva
        como un apoyo autodidáctico, completamente gratuito, abierto para todas las personas que lo requieran, pero
        dirigido principalmente a los estudiantes de ingeniería.\n\n\n

    </string>


    <string name="text_nuestro_comienzo">
        Nuestro comienzo\n
    </string>

    <string name="text_descripcion_comienzo">

        El proyecto comenzó cuando recién iniciamos nuestros estudios en la facultad.
        Teníamos el deseo de ayudar a nuestros compañeros cuando se les dificultaba
        temas que, a nosotros nos parecían más sencillos. Sin embargo llegó un punto
        en el que era demasiado y ya no era posible ayudarlos. Fue entonces que surgió
        la idea de contar con una plataforma que facilitara esta ayuda. Así, sería posible
        que más personas tuvieran acceso al apoyo, y no sólo un número limitado de estudiantes.\n\n\n

    </string>


    <string name="text_integrantes_conocenos">

        \tCEO y fundador de Neuroby: <b> <u> Adolfo Ordinola. </u> </b>\n
        Cofundadora y jefa de contenido: <b>Nalle García.</b></string>

    <string name="text_invitacion_app">

        ¡Ey! ¿Aún sufriendo con las materias de ingeniería?\n\n

        Echa un vistazo a la App que el Dios Adolfo creó para que dejes de ser un pendejo

        \n\n\n
        instagram.com/fortinsito


    </string>

</resources>
