<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asociacionfortin.neuroby.Trigonometria">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        android:layout_alignParentTop="true"
        android:elevation="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/buttonTrigonometriaTemaUnoUno"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:elevation="1dp"
                android:text="@string/descripcion_trigonometria_uno_uno"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonTrigonometriaTemaUnoDos"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:elevation="1dp"
                android:text="@string/descripcion_trigonometria_uno_dos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonTrigonometriaTemaUnoTres"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:elevation="1dp"
                android:text="@string/descripcion_trigonometria_uno_tres"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonTrigonometriaTemaUnoCuatro"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:elevation="1dp"
                android:text="@string/descripcion_trigonometria_uno_cuatro"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonTrigonometriaTemaUnoCinco"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:elevation="1dp"
                android:text="@string/descripcion_trigonometria_uno_cinco"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonTrigonometriaTemaUnoSeis"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:elevation="1dp"
                android:text="@string/descripcion_trigonometria_uno_seis"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonTrigonometriaTemaUnoSiete"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:elevation="1dp"
                android:text="@string/descripcion_trigonometria_uno_siete"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonTrigonometriaTemaUnoOcho"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:elevation="1dp"
                android:text="@string/descripcion_trigonometria_uno_ocho"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />






        </LinearLayout>




    </ScrollView>





</android.support.constraint.ConstraintLayout>
