<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"



    tools:context="com.example.asociacionfortin.neuroby.Conocenos">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewAcercaNeuroby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_acerca_neuroby"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/textViewDescripcionNeuroby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_descripcion_neuroby"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/textViewAcercaNosotros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_acerca_nosotros"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/textViewDescripcionNosotros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_descripcion_nosotros"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/textViewComienzo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_nuestro_comienzo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/textViewDescripcionComienzo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_descripcion_comienzo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>


    </ScrollView>


    <TextView
        android:id="@+id/textViewFundadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/text_integrantes_conocenos"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

</RelativeLayout>
